--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,3 +1,4 @@
+html { scroll-behavior: smooth; }
 * {
   margin: 0;
   padding: 0;
@@ -30,4 +31,5 @@ body {
   from { background-position: 0 0; }
   to { background-position: 0 220px; }
 }
-/*lab6-marker*/
+
+/* lab6: commit for regular history */
